fix tablet and desktop header from overflowing

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -17,8 +17,13 @@ body {
   font-family: "AvenirNext Normal";
 }
 
-html {
+html html {
   box-sizing: border-box;
+}
+html *,
+html *:before,
+html *:after {
+  box-sizing: inherit;
 }
 
 body {
@@ -33,15 +38,17 @@ header {
 }
 @media screen and (min-width: 768px) {
   header {
+    box-sizing: border-box;
     flex-direction: row;
     align-items: center;
-    padding: 0 2.25rem;
+    padding: 0 0 0 2.25rem;
   }
 }
 @media screen and (min-width: 1280px) {
   header {
-    margin: auto;
-    padding: 0 8rem;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0 0 0 8rem;
   }
 }
 
@@ -99,9 +106,10 @@ a {
 }
 
 .hero {
-  background: url(../assets/images/hero-bio.jpg) no-repeat center;
-  background-size: 100%;
-  width: 100%;
+  background: url(../assets/images/hero-bio.jpg) rgba(50, 50, 50, 0.5) no-repeat center center;
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: 100% 70%;
   height: 11rem;
   color: #ffffff;
   display: flex;
@@ -110,16 +118,13 @@ a {
 @media screen and (min-width: 768px) {
   .hero {
     height: 26rem;
-    background-position: 100% 70%;
-    padding: 0 2.25rem;
+    padding: 0 0 0 2.25rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .hero {
-    margin: auto;
-    padding: 0 8rem;
-    height: 35rem;
-    background-position: -14rem 35%;
+    padding: 0 0 0 8rem;
+    height: 40rem;
   }
 }
 
@@ -165,7 +170,7 @@ h1 {
 }
 @media screen and (min-width: 1280px) {
   .main__title {
-    margin: 2rem 0;
+    margin: 2.75rem 0;
   }
 }
 @media screen and (min-width: 768px) {
